                                   __
                       _ __ ___   / _|  ___  _ __ ___
                      | '_ ` _ \ | |_  / _ \| '_ ` _ \
                      | | | | | ||  _||  __/| | | | | |
                      |_| |_| |_||_|   \___||_| |_| |_|

                               https://mfem.org


Version 4.4.1 (development)
===========================
- Added WhiteGaussianNoiseDomainLFIntegrator: a LinearFormIntegrator class for
  spatial Gaussian white noise.

- Added a new Zienkiewicz-Zhu patch recovery-based a posteriori error estimator.
  See fem/estimators.hpp.

- Added support for ParMoonolith, https://bitbucket.org/zulianp/par_moonolith,
  which provides parallel non-conforming, non-matching, variational, volumetric
  mesh information transfer. With ParMortarAssember, fields can be exchanged
  between arbitrarily distributed and unrelated finite element meshes in a
  variationally consistent way.

- Add a new example code, Example 33/33p, to demonstrate the solution of
  spectral fractional PDEs with MFEM.


Version 4.4, released on March 21, 2022
=======================================

Linear and nonlinear solvers
----------------------------
- Added support for using the hypre library built with HIP support. Similar to
  the existing hypre + CUDA support, most of the MFEM examples and miniapps work
  transparently with hypre + HIP builds. This includes the BoomerAMG, AMS, and
  ADS solvers.

- Added a simple singleton class, Hypre, to automatically set hypre's global
  parameters, particularly GPU-relevant options. Updated parallel example codes
  and miniapps to call Hypre::Init() where appropriate.

- Added hipSPARSE support for sparse matrix-vector multiplications.

- More explicit and consistent formatting of the output of iterative solvers
  with the new IterativeSolver::PrintLevel options. See linalg/solvers.hpp.

Meshing improvements
--------------------
- New TMOP-based methods for hr-adaptivity, interface fitting, and tangential